ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: microservices.com
      http:
        paths:
          - path: /api/platforms
            pathType: ImplementationSpecific
            backend:
              service:
                name: platforms-clusterip-srv
                port:
                  number: 8080
          - path: /api/commands/platforms
            pathType: ImplementationSpecific
            backend:
              service:
                name: commands-clusterip-srv
                port:
                  number: 8080
